src/evaluator/expression/call/tests/snapshots/monkey_interpreter__evaluator__expression__call__tests__test_evaluator_call_nodes_case6.snap
---
source: src/evaluator/expression/call/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code)))"

---
Null
